version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/Application/Progress.rst.txt
.. vale off



:class:`Progress`
=================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.Application.Progress(obj: Ansys.Common.Interop.AnsCoreObjects.IAnsProgress)

   Bases: :py:obj:`object`


   
   Defines a Progress.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Progress

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~SetProgress`
            - Set the current progress state
          * - :py:attr:`~ToString`
            - ToString method.
          * - :py:attr:`~add_OnStopped`
            - add_OnStopped method.
          * - :py:attr:`~remove_OnStopped`
            - remove_OnStopped method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~InternalObject`
            - InternalObject property.







Property detail
---------------
.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.AnsCoreObjects.IAnsProgress]


   
   InternalObject property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: SetProgress(uiProgress: int, uiMessage: str, uiSubProgress: int, uiSubMessage: str) -> None

   
   Set the current progress state

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: add_OnStopped(value: System.EventHandler) -> None

   
   add_OnStopped method.

   ..
       !! processed by numpydoc !!

.. py:method:: remove_OnStopped(value: System.EventHandler) -> None

   
   remove_OnStopped method.

   ..
       !! processed by numpydoc !!



.. vale on